--- a/create_account.html
+++ b/create_account.html
@@ -14,6 +14,6 @@
     <p>Konfirmasi Kata Sandi: </p><input type="password" name="password_confirm" placeholder="Konfirmasi Kata Sandi" id="pass_container" required>
     <input type="submit" value="Buat Akun Baru">
 </form>
-<p>Sudah mempunyai akun? <a href="/create_account">Masuk log!</a></p>
+<p>Sudah mempunyai akun? <a href="/login">Masuk log!</a></p>
 </body>
 </html>
