--- a/berhasillogin.html
+++ b/berhasillogin.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Berhasil masuk log</h1>
-	<button onclick="window.location.href = '/';">Ke Menu Utama</button>
+	<button onclick="window.location.href = '/login';">Ke Menu Utama</button>
 </body>
 </html>
